err/moments.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Moments-2.0.egg-info'...
Listing './lib/python3.5/site-packages/moments'...
Compiling './lib/python3.5/site-packages/moments/bottle.py'...
***   File "./lib/python3.5/site-packages/moments/bottle.py", line 305
    except (AssertionError, IndexError), e: # AssertionError: Too many groups
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moments/export.py'...
***   File "./lib/python3.5/site-packages/moments/export.py", line 68
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moments/filters.py'...
***   File "./lib/python3.5/site-packages/moments/filters.py", line 101
    raise ValueError, "path must be a file, got: %s" % path
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moments/journal.py'...
***   File "./lib/python3.5/site-packages/moments/journal.py", line 39
    print "No json module found"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moments/log.py'...
***   File "./lib/python3.5/site-packages/moments/log.py", line 63
    print "UNKNOWN FILE!"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moments/moment.py'...
***   File "./lib/python3.5/site-packages/moments/moment.py", line 107
    raise TypeError, "Unknown time format for moment created value: %s type: %s" % (created, type(created))
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moments/path.py'...
***   File "./lib/python3.5/site-packages/moments/path.py", line 95
    print "No instance entry found in journal: %s for tag: %s " % (instances, tag)
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/moments/server.py'...
***   File "./lib/python3.5/site-packages/moments/server.py", line 47
    print "No json module found"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/moments/timestamp.py'...
***   File "./lib/python3.5/site-packages/moments/timestamp.py", line 177
    raise ValueError, "Unknown Timestamp start value: %s of type %s" % (auto, type(auto))
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
